--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ height: 100vh;
 }
 #header .logo h3 {
 flex-grow: 1;
-text-align: center;
+text-align: right;
 font-family: cursive;
 font-size: 28px;
 color: #fff;
@@ -203,6 +203,15 @@ text-decoration: none;
 .disable {
 background: #b8daf5 !important;
 }
+
+#instruction{
+	color: rgb(255, 255, 255);
+margin-top: 15px;
+text-align: center;
+font-size: 24px;
+font-family: cursive;
+}
+
 @media screen and (max-width: 768px) {
 
 .questOptContainer {
